# mobile_STERO-18Z-Dolicher-Gruszczynski

./: CMakeLists.txt  aaa.bag  laserTO_odom_tune.bag  mapa_sruby.yaml  package.xml  test_kwadratu_diff_drive_controller.bag  test_kwadratu_tune_controller.bag  test_linii_diff_drive_controller.bag  test_linii_tune_controller.bag  test_obrotu_diff_drive_controller.bag  test_obrotu_tune_controller.bag  tuneTK.bag  tuneTL.bag
Dobre bagi/: diffTK.bag  diffTL.bag  diffTO.bag  laserTK_no_odom.bag  laserTK_odom_diff.bag  laserTK_odom_tune.bag  laserTL_no_odom.bag  laserTL_odom_diff.bag  laserTL_odom_tune.bag  laserTO_no_odom.bag  laserTO_odom_diff.bag  laserTO_odom_tune.bag  tuneTK.bag  tuneTK.orig.bag  tuneTL.bag  tuneTO.bag
bag_files/: diffTL.bag  diffTO.bag  laserTK_odom_tune.bag  laserTO_odom_diff.bag  laserTO_odom_tune.bag  tuneTL.bag
code/: client.py  data.txt  errorsSummary.py  generateNode.py  inter_odo.py  laserTK.py  laserTL.py  laserTO.py  nodeService.py  one_ahead.bag  service.py  talker.py  test_kwadratu.py  test_laser.py  test_linii.py  test_obrotu.py  wykresy.py  wykresy_obrotow.py
config/.robots/: elektron_Laser_Tower-kinect.urdf.xacro  elektron_Laser_Tower-rgb.urdf.xacro
cpp_code/: l_costmap.cpp
dontAskMeWhy/: diffTK.bag  laserTK_no_odom.bag  laserTK_odom_diff.bag  laserTL_no_odom.bag  laserTL_odom_diff.bag  laserTL_odom_tune.bag  laserTO_no_odom.bag  tuneTO.bag
launch/: costmap_config.launch  elektron_world.launch  laser_no_odom.launch  laser_odom.launch
launch/Lab5/: lab5_init.launch
launch/Projekt4/: costmap_config.launch
planer/: baseLocalPLanner.yaml  baseLocalPlanner.cpp
src/: costmap.cpp
srv/: ElektronSrv.srv
worlds/: gazebo2.world
worlds/GazeboKorytarz/: model.config  model.sdf
worlds/GazeboKorytarz2/: model.config  model.sdf
yamls/: baseLocalPlanner.yaml  global_costmap.yaml  global_planner_config.yaml  local_costmap.yaml  local_costmap1.yaml
